--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "my-v0-project",
+  "name": "formulario-conversacional",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",   
     "lint": "next lint"
+  },
+  "engines": {
+    "node": ">=18 <23"             
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
